# star_track_python

./: .env.example  .gitignore  dataclass_tutorial.md  docker-compose.yml  requirements.txt  selector.html
0523/: cursor_pricing.md  example.md
0526/: README.md  analysis.py  requirements.txt
0527/: Python_Core_Concepts_Practice1.ipynb  fastmcp_tutorial.md  slack-mcp-assignment.md
0527/weather-mcp/: Dockerfile  README.md  pyproject.toml  weather_server.py
0528/: dummy.sql
0604/: Python_Statistic_Analytics_Practice_Part1.ipynb  Python_Statistic_Analytics_Practice_Part1_with_answersheet.ipynb  Python_Statistic_Analytics_Practice_Part2.ipynb  Python_Statistic_Analytics_Practice_Part3.ipynb  Python_Statistic_Analytics_Practice_Part4.ipynb  Python_Statistic_Analytics_Practice_Part5.ipynb  m1-m2.md
0605/: Statistical_ABTest_Basic_Practice.ipynb  Statistical_ABTest_Basic_Practice_with_answersheet.ipynb
0609/: TimeSeries_Analysis_Part1.ipynb  TimeSeries_Analysis_Part1_with_answersheet.ipynb  TimeSeries_Analysis_Part2.ipynb  TimeSeries_Analysis_Part2_with_answersheet.ipynb  TimeSeries_Analysis_Part3.ipynb  TimeSeries_Analysis_Part3_with_answersheet.ipynb  TimeSeries_Analysis_Part4.ipynb  TimeSeries_Analysis_Part5.ipynb
0610/: DeepLearning_TimeSeires_Forecating_answersheet.ipynb  Granger_Causality_Test.md  TSA_Practice.ipynb  TSA_Practice_Answersheet.ipynb  TimeSeries_Analysis_Part4_with_answersheet.ipynb  TimeSeries_Analysis_Part5.ipynb  TimeSeries_Analysis_Part5_with_answersheet.ipynb  pmdarima_tutorial.md
0611/: Attachment1_Embedding_API.md  (+3 more)
datasets/: 합계출산율.csv  (+2 more)
(+86 files in other folders)
