[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "FastMCP를 사용한 날씨 정보 MCP 서버"
authors = [
    {name = "Weather MCP Team", email = "team@weather-mcp.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.25.0"
]

[tool.setuptools]
py-modules = ["weather_server"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
weather-mcp = "weather_server:main"

[project.urls]
Homepage = "https://github.com/weather-mcp/weather-mcp-server"
Repository = "https://github.com/weather-mcp/weather-mcp-server"
Documentation = "https://weather-mcp.readthedocs.io"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
